[gd_scene load_steps=5 format=2]

[ext_resource path="res://PhaseTracker.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="PhaseTracker" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="PhaseProgress" type="TextureProgress" parent="."]
light_mask = 0
margin_left = 11.6832
margin_top = 550.53
margin_right = 273.683
margin_bottom = 590.53
tint_under = Color( 0.101961, 0.0117647, 0.0117647, 1 )
tint_over = Color( 0.737255, 0.227451, 0.878431, 1 )
tint_progress = Color( 0.843137, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PhaseProgressLabel" type="Label" parent="."]
margin_left = 12.1182
margin_top = 446.748
margin_right = 276.118
margin_bottom = 485.748
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PhaseTimRemainingLabel" type="Label" parent="."]
margin_left = 14.3459
margin_top = 494.953
margin_right = 279.346
margin_bottom = 533.953
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
